--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,15 @@
     </ul>
 
     <section class="top-bar-section">
+    <% if user_signed_in? %>
+      <% if current_user.admin? %>
+        <ul class="left">
+          <li class="name">
+            <%= link_to 'New GreenSpace', new_green_space_path %>
+          </li>
+        </ul>
+      <% end %>
+    <% end %>
       <ul class="right">
         <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
