--- a/app/views/green_spaces/new.html.erb
+++ b/app/views/green_spaces/new.html.erb
@@ -10,6 +10,11 @@
     <%= f.text_field :description %>
   </div>
 
+  <div class="field">
+    <%= f.label :neighborhood %>
+    <%= f.select :neighborhood, options_for_select(@neighborhoods) %>
+  </div>
+
   <div class="actions">
     <%= f.submit "Add Green Space"%>
   </div>
