--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,18 @@
     </ul>
 
     <section class="top-bar-section">
-    <% if user_signed_in? %>
-      <% if current_user.admin? %>
-        <ul class="left">
-          <li class="name">
-            <%= link_to 'New GreenSpace', new_green_space_path %>
-          </li>
-        </ul>
-      <% end %>
-    <% end %>
+      <ul class="left">
+        <li>
+          <%= link_to 'Edit User Profile', edit_user_registration_path(current_user)%>
+        </li>
+        <% if user_signed_in? %>
+          <% if current_user.admin? %>
+            <li>
+              <%= link_to 'New GreenSpace', new_green_space_path %>
+            </li>
+          <% end %>
+        <% end %>
+      </ul>
       <ul class="right">
         <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
