--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,16 @@
       </li>
     </ul>
 
+
     <section class="top-bar-section">
+      <ul class="left">
+        <li class="name">
+          <h1> <%= link_to 'Neighborhoods', neighborhoods_path %> </h1>
+        </li>
+        <li class="name">
+          <h1> <%= link_to 'Features', features_path %> </h1>
+        </li>
+      </ul>
     <% if user_signed_in? %>
       <% if current_user.admin? %>
         <ul class="left">
