added dynamic zoom, address and acres. updated tests to support coordinates

--- a/app/views/green_spaces/new.html.erb
+++ b/app/views/green_spaces/new.html.erb
@@ -11,6 +11,21 @@
   </div>
 
   <div class="field">
+    <%= f.label :address %><br />
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="field">
+    <%= f.label :acres %><br />
+    <%= f.text_field :acres %>
+  </div>
+
+  <div class="field">
+    <%= f.label :coordinates %><br />
+    <%= f.text_field :coordinates %>
+  </div>
+
+  <div class="field">
     <%= f.label :neighborhood %>
     <%= f.select :neighborhood, options_for_select(@neighborhoods) %>
   </div>
