--- a/app/views/green_spaces/new.html.erb
+++ b/app/views/green_spaces/new.html.erb
@@ -21,8 +21,13 @@
   </div>
 
   <div class="field">
-    <%= f.label :coordinates %><br />
-    <%= f.text_field :coordinates %>
+    <%= f.label :latitude %><br />
+    <%= f.text_field :latitude %>
+  </div>
+
+  <div class="field">
+    <%= f.label :longitude %><br />
+    <%= f.text_field :longitude %>
   </div>
 
   <div class="field">
