--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,6 +1,25 @@
+button.visible,
+input[type=submit],
+input[type=submit]:focus,
+button.visible:focus {
+  background-color: #014421;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+
+input[type=submit]:hover,
+button.visible:hover{
+  background-color: #4F7942;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 button.visible {
   visibility: visible;
+  padding: 10px,inherit;
+  margin: 10px;
 }
+
 
 button.hidden {
   visibility: hidden;
