--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -70,8 +70,7 @@
 
   <%= yield :extra_footer %>
 
-  <script
-    src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["MAPS_API_KEY"] %>">
+  <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["MAPS_API_KEY"] %>">
   </script>
 </body>
 </html>
