Saving progress on search bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,10 @@
             </li>
           <% end %>
         <% end %>
+        <li>
+          <div id="search-bar">
+          </div>
+        </li>
       </ul>
       <ul class="right">
         <%- if current_user -%>
