--- a/app/views/green_spaces/index.html.erb
+++ b/app/views/green_spaces/index.html.erb
@@ -1,6 +1,3 @@
-<h1 class="text-center">Green Spaces</h1>
-<% @green_spaces.each do |space| %>
-  <div class="column panel callout small-9 small-centered">
-    <p><%= link_to space.name, green_space_path(space) %></p>
-  </div>
-<% end %>
+<div id="app">
+
+</div>
