--- a/app/assets/stylesheets/app.css
+++ b/app/assets/stylesheets/app.css
@@ -1,3 +1,10 @@
+.green-button {
+  color: white;
+  font-size: 1.05rem;
+  height: 50px;
+  width: 90px;
+}
+
 button.visible,
 input[type=submit],
 input[type=submit]:focus,
@@ -6,7 +13,6 @@ button.visible:focus {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
-
 
 input[type=submit]:hover,
 button.visible:hover{
@@ -19,7 +25,6 @@ button.visible {
   padding: 10px,inherit;
   margin: 10px;
 }
-
 
 button.hidden {
   visibility: hidden;
