--- a/app/assets/stylesheets/perfect.css
+++ b/app/assets/stylesheets/perfect.css
@@ -13,7 +13,7 @@ body {
 }
 
 .panel.callout p{
-  font-size: 2rem;
+  font-size: 150%;
 }
 
 .index-item,
@@ -24,7 +24,7 @@ body {
 h1, h2 {
   font-family: 'Amatic SC', bold;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 2.7rem;
 }
 
 p {
@@ -62,6 +62,10 @@ label{
   font-size: 1.8rem;
 }
 
+.top-row {
+  float: right;
+}
+
 .title-container{
   text-align: center;
 }
@@ -73,6 +77,7 @@ label{
 
 .index-title {
   text-align: center;
+  float: top;
 }
 
 .search-bar {
