--- a/app/views/green_spaces/new.html.erb
+++ b/app/views/green_spaces/new.html.erb
@@ -38,7 +38,7 @@
     </div>
 
     <div class="actions">
-      <%= f.submit "Submit", class: "green-button"%>
+      <%= f.submit "Add Green Space", class: "green-button"%>
     </div>
   <% end %>
   </div>
